kubernetes/ckad/wordpress-rbd/wordpress-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
  - host: wordpress.fritz.box
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
